Check existence of test output

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,4 @@ install:
 
 script:
     - ./heatmap.py -b black -p test/graffiti.coords -r 30 -W 1200 -o g1.png -P equirectangular
+    - file g1.png
