Use PPM to avoid additional dependencies on Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,5 @@ install:
     - pip install pil
 
 script:
-    - ./heatmap.py -b black -p test/graffiti.coords -r 30 -W 1200 -o g1.png -P equirectangular
-    - file g1.png
+    - ./heatmap.py -b black -p test/graffiti.coords -r 30 -W 1200 -o g1.ppm -P equirectangular
+    - file g1.ppm
