--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ python:
     - "2.7"
 
 install:
-    - pip install pil
+    - pip --quiet install pil
 
 script:
     - ./heatmap.py -b black -p test/graffiti.coords -r 30 -W 1200 -o g1.ppm -P equirectangular
