--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,13 @@ language: python
 
 python:
     - "2.7"
+    - "3.2"
 
 install:
+    - if [ "$TRAVIS_PYTHON_VERSION" == "3.2" ]; then pip --quiet install git+https://github.com/sloonz/pil-py3k.git; else pip --quiet install pil; fi
     - pip --quiet install pil
 
 script:
     - ./heatmap.py -b black -p test/graffiti.coords -r 30 -W 1200 -o g1.ppm -P equirectangular
     - file g1.ppm
+    - diff test/graffiti.ppm g1.ppm
