--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,10 @@ language: python
 
 python:
     - "2.7"
+    - "3.2"
 
 install:
-    - if [ "$TRAVIS_PYTHON_VERSION" == "3.2" ]; then pip --quiet install git+https://github.com/sloonz/pil-py3k.git; else pip --quiet install pil; fi
+    - if [ "$TRAVIS_PYTHON_VERSION" == "3.2" ]; then pip --quiet install git+https://github.com/webitup/pil-py3k-mirror.git; else pip --quiet install pil; fi
     - pip --quiet install pil
     - sudo apt-get --quiet=2 install perceptualdiff
 
