Add Python 3 support, improve test case.
Merging the following changes from
git://github.com/myint/heatmap.git branch "travis":

c451f7b50a1245fd021870fb9d811830e54aa79d Add Python 3 support
b1d7259ba5a0165a82dda2c48742e8724189e7e7 Use perceptualdiff to compare images
0925defd60cd7cdad9c6cca6bbc4a9a6906df81a Use proper dimensions
857c7489c9a688b287dd930bf2bcd889e0b65642 Enable Python 3 test
24a9e64212341b4330c483ef09aa653cc6940ebc Move test to a separate file
2abcd343799829a7f75901fdf12725a05af0cfef Correct Paths

It was all very manual, as it was done in parallel to some other work
(PEP8 reformatting, test speedup) that got checked in first.

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,9 @@ python:
     - "2.7"
 
 install:
+    - if [ "$TRAVIS_PYTHON_VERSION" == "3.2" ]; then pip --quiet install git+https://github.com/webitup/pil-py3k-mirror.git; fi
     - pip --quiet install pil
+    - sudo apt-get --quiet=2 install perceptualdiff
 
 script:
-    - ./heatmap.py -b black -p test/few-points -r 3 -W 22 -o output.ppm -P equirectangular
-    - file output.ppm
+    - ./test/test.py
