--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,8 @@ python:
 
 install:
     - if [ "$TRAVIS_PYTHON_VERSION" == "3.2" ]; then pip --quiet install git+https://github.com/sloonz/pil-py3k.git; fi
-    - pip --quiet install pil
+    - sudo apt-get install zlib1g
+    - pip install pil
     - sudo apt-get --quiet=2 install perceptualdiff
 
 script:
