--- a/.travis.yml
+++ b/.travis.yml
@@ -5,12 +5,11 @@ python:
     - "3.2"
 
 before_install:
-    - sudo apt-get install zlib1g-dev
     - sudo ln -s /usr/lib/`uname -i`-linux-gnu/libz.so ~/virtualenv/python2.7/lib/
 
 install:
-    - if [ "$TRAVIS_PYTHON_VERSION" == "3.2" ]; then pip --quiet install git+https://github.com/sloonz/pil-py3k.git; fi
-    - pip install pil
+    - if [ "$TRAVIS_PYTHON_VERSION" == "3.2" ]; then pip install git+https://github.com/sloonz/pil-py3k.git; fi
+    - pip --quiet install pil
     - sudo apt-get --quiet=2 install perceptualdiff
 
 script:
