--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ python:
 
 before_install:
     - sudo ln -s /usr/lib/`uname -i`-linux-gnu/libz.so ~/virtualenv/python2.7/lib/
+    - sudo ln -s /usr/lib/`uname -i`-linux-gnu/libz.so ~/virtualenv/python3.2/lib/
 
 install:
     - if [ "$TRAVIS_PYTHON_VERSION" == "3.2" ]; then pip install git+https://github.com/sloonz/pil-py3k.git; fi
