--- a/.travis.yml
+++ b/.travis.yml
@@ -6,12 +6,12 @@ python:
 
 before_install:
     - sudo ln -s /usr/lib/`uname -i`-linux-gnu/libz.so ~/virtualenv/python2.7/lib/
-    - sudo ln -s /usr/lib/`uname -i`-linux-gnu/libz.so ~/virtualenv/python3.2/lib/
 
 install:
-    - if [ "$TRAVIS_PYTHON_VERSION" == "3.2" ]; then pip install git+https://github.com/sloonz/pil-py3k.git; fi
+    - if [ "$TRAVIS_PYTHON_VERSION" == "3.2" ]; then pip install --quiet git+https://github.com/sloonz/pil-py3k.git; fi
     - pip --quiet install pil
     - sudo apt-get --quiet=2 install perceptualdiff
 
 script:
     - ./test/test.py
+    - if [ "$TRAVIS_PYTHON_VERSION" == "2.7" ]; then ./test/test_gradients.py; fi
