--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,10 @@ install:
 
 script:
     - ./test/test.py
+    - ./test/test_coordinates.py
+    - ./test/test_projections.py
+    - ./test/test_gpx.py
+    - ./test/test_projection_scale.py
+    - ./test/test_animation.py
+    - ./test/test_random.py
     - if [ "$TRAVIS_PYTHON_VERSION" == "2.7" ]; then ./test/test_gradients.py; fi
