--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_install:
     - sudo ln -s /usr/lib/`uname -i`-linux-gnu/libz.so ~/virtualenv/python2.7/lib/
 
 install:
-    - if [ "$TRAVIS_PYTHON_VERSION" == "3.2" ]; then pip install --quiet git+https://github.com/python-imaging/Pillow.git; else pip --quiet --allow-external install pil; fi
+    - if [ "$TRAVIS_PYTHON_VERSION" == "3.2" ]; then pip install --quiet git+https://github.com/python-imaging/Pillow.git; else pip --quiet install --allow-external pil; fi
     - sudo apt-get --quiet=2 install perceptualdiff
 
 script:
