--- a/.travis.yml
+++ b/.travis.yml
@@ -18,4 +18,4 @@ script:
     - ./test/test_gpx.py
     - ./test/test_projection_scale.py
     - ./test/test_random.py
-    - if [ "$TRAVIS_PYTHON_VERSION" == "2.7" ]; then ./test/test_gradients.py; fi
+    - ./test/test_gradients.py
