Added support for ESRI shape files
Specify shape file with the option --shp_file=/path/to/file.shp
The shape file must be a point layer in EPSG 4326 (that is lat/long, as with projection mercator)
Also added a unit test in test/test_shp_file.py and added the test to travis
Note: python-gdal bindings must be installed to support this option

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,7 @@ script:
     - coverage run --source heatmap --append ./test/test_projection_scale.py
     - coverage run --source heatmap --append ./test/test_random.py
     - coverage run --source heatmap --append ./test/test_gradients.py
+    - coverage run --source heatmap --append ./test/test_shp_file.py
 
 after_success:
     - coverage report
