--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ install:
     - pip install coveralls
     - pip install --quiet git+https://github.com/python-imaging/Pillow.git
     - sudo apt-get --quiet=2 install perceptualdiff
+    - sudo apt-get -y python-gdal
 
 script:
     - coverage erase
