--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ install:
     - if [ "$TRAVIS_PYTHON_VERSION" == "2.6" ]; then travis_retry pip install unittest2; fi
     - pip install coveralls
     - pip install --quiet git+https://github.com/python-imaging/Pillow.git
-    - add-apt-repository -y ppa:ubuntugis/ubuntugis-unstable
+    - sudo add-apt-repository -y ppa:ubuntugis/ubuntugis-unstable
     - sudo apt-get update -qq
     - sudo apt-get install libgdal1h
     - sudo apt-get --quiet=2 install perceptualdiff
