--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,10 @@ python:
     - "3.3"
     - "3.4"
 
+# for gdal
+virtualenv:
+   system_site_packages: true
+
 before_install:
     - sudo ln -s /usr/lib/`uname -i`-linux-gnu/libz.so ~/virtualenv/python2.7/lib/
 
@@ -18,8 +22,8 @@ install:
     - pip install --quiet git+https://github.com/python-imaging/Pillow.git
     - sudo add-apt-repository -y ppa:ubuntugis/ubuntugis-unstable
     - sudo apt-get update -qq
-    - sudo apt-get install libgdal1h
     - sudo apt-get --quiet=2 install perceptualdiff
+    - sudo apt-get install libgdal1h
     - sudo apt-get install -y python-gdal
 
 script:
@@ -31,7 +35,9 @@ script:
     - coverage run --source heatmap --append ./test/test_projection_scale.py
     - coverage run --source heatmap --append ./test/test_random.py
     - coverage run --source heatmap --append ./test/test_gradients.py
-    - coverage run --source heatmap --append ./test/test_shp_file.py
+
+    # gdal only installed for python 2.7
+    - if [ "$TRAVIS_PYTHON_VERSION" == "2.7" ]; then coverage run --source heatmap --append ./test/test_shp_file.py; fi
 
 after_success:
     - coverage report
