--- a/.travis.yml
+++ b/.travis.yml
@@ -41,10 +41,12 @@ script:
     - python test/test_system.py
     - python test/test_system_gpx.py
     - python test/test_system_csv.py
-    - python test/test_old_cmdline_support.py
 
     # we only have gdal in system packages
     - if [ "$TRAVIS_PYTHON_VERSION" == "2.7_with_system_site_packages" -o "$TRAVIS_PYTHON_VERSION" == "3.2_with_system_site_packages" ]; then coverage run --source heatmap --append ./test/test_shp_file.py; fi
+
+    # we only have gdal in system packages
+    - if [ "$TRAVIS_PYTHON_VERSION" == "2.7_with_system_site_packages" -o "$TRAVIS_PYTHON_VERSION" == "3.2_with_system_site_packages" ]; then python test/test_old_cmdline_support.py; fi
 
 after_success:
     - coverage report
