--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,8 @@ before_install:
 install:
     - pip install coverage
     - travis_retry pip install coveralls
-    - travis_retry pip install -r requirements.txt
     - travis_retry sudo apt-get --quiet=2 install perceptualdiff
+    - pip install -e .
 
     # we only have gdal in system packages
     - if [ "$TRAVIS_PYTHON_VERSION" == "2.7_with_system_site_packages" ]; then pushd depends && ./install_gdal.sh && popd; fi
