--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,12 @@ python:
     - "3.6"
     - "3.5"
 
+# Enable 3.7 without globally enabling dist: xenial for other build jobs
+matrix:
+  include:
+    - python: 3.7
+      dist: xenial
+
 before_install:
     - sudo ln -s /usr/lib/`uname -i`-linux-gnu/libz.so ~/virtualenv/python2.7/lib/
 
