--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ before_install:
 
 install:
     - pip install -U pip
+    - pip install -U pyopenssl
     - pip install coverage
     - travis_retry pip install coveralls
     - travis_retry pip install -r requirements.txt
