--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,42 @@
+[metadata]
+name = heatmap-cli
+version = 1.14.dev0
+description = Generate high quality heatmaps from coordinate data
+long_description = file: README.md
+long_description_content_type = text/markdown
+url = https://www.sethoscope.net/heatmap/
+author = Seth Golub
+author_email = tmp+17657@sethoscope.net
+license = GPLv3
+license_files = LICENSE
+classifiers =
+    Development Status :: 5 - Production/Stable
+    Environment :: Console
+    Intended Audience :: Developers
+    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
+    Operating System :: OS Independent
+    Programming Language :: Python
+    Programming Language :: Python :: 2
+    Programming Language :: Python :: 2.7
+    Programming Language :: Python :: 3
+    Programming Language :: Python :: 3.5
+    Programming Language :: Python :: 3.6
+    Programming Language :: Python :: 3.7
+    Topic :: Multimedia :: Graphics
+    Topic :: Scientific/Engineering :: Visualization
+keywords = heatmap, coordinate, GPS, map
+
+[options]
+py_modules = heatmap
+install_requires =
+    osmviz>=4.0
+    pillow
+python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, !=3.5.*
+zip_safe = True
+
+[options.entry_points]
+console_scripts =
+    heatmap=heatmap:main
+
 [bdist_wheel]
 universal = 1
-
-[metadata]
-license_file = LICENSE
